--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -2,14 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 15,
    "id": "6e468b16-ea0e-4f23-8d7c-ec0e1dd9ed85",
    "metadata": {},
    "outputs": [],
    "source": [
     "\n",
+    "import os\n",
     "import pandas as pd\n",
-    "\n",
     "\n",
     "from googleapiclient.discovery import build  # Google API\n",
     "from IPython.display import JSON             # Disply JSON\n",
@@ -46,8 +46,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "185fd6c1-df13-4bce-9c27-882b6b341b95",
+   "metadata": {},
+   "source": [
+    "#### Get channel statistics "
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "b3315d69-8387-4489-9c3b-047b3d3f9ce5",
    "metadata": {},
    "outputs": [],
@@ -78,13 +86,12 @@
     "                    )\n",
     "        all_data.append(data)\n",
     "    \n",
-    "    return pd.DataFrame(all_data)\n",
-    "    "
+    "    return pd.DataFrame(all_data)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "f6c3cf79-ff7b-41ce-950f-7bccf89889ea",
    "metadata": {},
    "outputs": [
@@ -121,53 +128,53 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>blogilates</td>\n",
-       "      <td>Hey guys! My name is Cassey Ho, I am a certifi...</td>\n",
-       "      <td>2009-06-13T09:05:48Z</td>\n",
-       "      <td>8570000</td>\n",
-       "      <td>2717016358</td>\n",
-       "      <td>1177</td>\n",
-       "      <td>UUIJwWYOfsCfz6PjxbONYXSg</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
        "      <td>Chloe Ting</td>\n",
        "      <td>Subscribe to my channel and find weekly workou...</td>\n",
        "      <td>2011-08-17T04:29:09Z</td>\n",
        "      <td>24600000</td>\n",
-       "      <td>2964839459</td>\n",
+       "      <td>2965643413</td>\n",
        "      <td>405</td>\n",
        "      <td>UUCgLoMYIyP0U56dEhEL1wXQ</td>\n",
        "    </tr>\n",
        "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>blogilates</td>\n",
+       "      <td>Hey guys! My name is Cassey Ho, I am a certifi...</td>\n",
+       "      <td>2009-06-13T09:05:48Z</td>\n",
+       "      <td>8580000</td>\n",
+       "      <td>2723093080</td>\n",
+       "      <td>1177</td>\n",
+       "      <td>UUIJwWYOfsCfz6PjxbONYXSg</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
        "      <th>2</th>\n",
+       "      <td>Rebecca-Louise</td>\n",
+       "      <td>Hey, \\n\\nWelcome to #TEAMBURN 🙌🏻 \\n\\nI am so e...</td>\n",
+       "      <td>2012-09-22T18:04:00Z</td>\n",
+       "      <td>719000</td>\n",
+       "      <td>116976058</td>\n",
+       "      <td>1239</td>\n",
+       "      <td>UUi0AqmA_3DGPFCu5qY0LLSg</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
        "      <td>emi wong</td>\n",
        "      <td>welcome to my channel!\\nhope my videos can hel...</td>\n",
        "      <td>2014-11-02T14:43:34Z</td>\n",
        "      <td>6060000</td>\n",
-       "      <td>809944803</td>\n",
+       "      <td>810394833</td>\n",
        "      <td>490</td>\n",
        "      <td>UUvGEK5_U-kLgO6-AMDPeTUQ</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
+       "      <th>4</th>\n",
        "      <td>MadFit</td>\n",
        "      <td>This is a place where I post REAL TIME, AT HOM...</td>\n",
        "      <td>2018-03-02T01:46:06Z</td>\n",
-       "      <td>7940000</td>\n",
-       "      <td>932098011</td>\n",
-       "      <td>709</td>\n",
+       "      <td>7950000</td>\n",
+       "      <td>932630071</td>\n",
+       "      <td>710</td>\n",
        "      <td>UUpQ34afVgk8cRQBjSJ1xuJQ</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>Rebecca-Louise</td>\n",
-       "      <td>Hey, \\n\\nWelcome to #TEAMBURN 🙌🏻 \\n\\nI am so e...</td>\n",
-       "      <td>2012-09-22T18:04:00Z</td>\n",
-       "      <td>718000</td>\n",
-       "      <td>116943876</td>\n",
-       "      <td>1238</td>\n",
-       "      <td>UUi0AqmA_3DGPFCu5qY0LLSg</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -175,39 +182,48 @@
       ],
       "text/plain": [
        "      ChannelName                                 ChannelDescription  \\\n",
-       "0      blogilates  Hey guys! My name is Cassey Ho, I am a certifi...   \n",
-       "1      Chloe Ting  Subscribe to my channel and find weekly workou...   \n",
-       "2        emi wong  welcome to my channel!\\nhope my videos can hel...   \n",
-       "3          MadFit  This is a place where I post REAL TIME, AT HOM...   \n",
-       "4  Rebecca-Louise  Hey, \\n\\nWelcome to #TEAMBURN 🙌🏻 \\n\\nI am so e...   \n",
+       "0      Chloe Ting  Subscribe to my channel and find weekly workou...   \n",
+       "1      blogilates  Hey guys! My name is Cassey Ho, I am a certifi...   \n",
+       "2  Rebecca-Louise  Hey, \\n\\nWelcome to #TEAMBURN 🙌🏻 \\n\\nI am so e...   \n",
+       "3        emi wong  welcome to my channel!\\nhope my videos can hel...   \n",
+       "4          MadFit  This is a place where I post REAL TIME, AT HOM...   \n",
        "\n",
        "          PublishedDate TotalSubscribers  TotalViews TotalVideos  \\\n",
-       "0  2009-06-13T09:05:48Z          8570000  2717016358        1177   \n",
-       "1  2011-08-17T04:29:09Z         24600000  2964839459         405   \n",
-       "2  2014-11-02T14:43:34Z          6060000   809944803         490   \n",
-       "3  2018-03-02T01:46:06Z          7940000   932098011         709   \n",
-       "4  2012-09-22T18:04:00Z           718000   116943876        1238   \n",
+       "0  2011-08-17T04:29:09Z         24600000  2965643413         405   \n",
+       "1  2009-06-13T09:05:48Z          8580000  2723093080        1177   \n",
+       "2  2012-09-22T18:04:00Z           719000   116976058        1239   \n",
+       "3  2014-11-02T14:43:34Z          6060000   810394833         490   \n",
+       "4  2018-03-02T01:46:06Z          7950000   932630071         710   \n",
        "\n",
        "                 playlistID  \n",
-       "0  UUIJwWYOfsCfz6PjxbONYXSg  \n",
-       "1  UUCgLoMYIyP0U56dEhEL1wXQ  \n",
-       "2  UUvGEK5_U-kLgO6-AMDPeTUQ  \n",
-       "3  UUpQ34afVgk8cRQBjSJ1xuJQ  \n",
-       "4  UUi0AqmA_3DGPFCu5qY0LLSg  "
+       "0  UUCgLoMYIyP0U56dEhEL1wXQ  \n",
+       "1  UUIJwWYOfsCfz6PjxbONYXSg  \n",
+       "2  UUi0AqmA_3DGPFCu5qY0LLSg  \n",
+       "3  UUvGEK5_U-kLgO6-AMDPeTUQ  \n",
+       "4  UUpQ34afVgk8cRQBjSJ1xuJQ  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "get_channel_stats(youtube, channel_ids)"
+    "channels_df = get_channel_stats(youtube, channel_ids)\n",
+    "channels_df"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7944eb7b-d8f9-4d83-8502-47c867b0117c",
+   "metadata": {},
+   "source": [
+    "#### Get video statistics and comments"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 10,
    "id": "ff49cd21-cae4-4bf7-8c7d-5a3ddf70b3ab",
    "metadata": {},
    "outputs": [],
@@ -256,29 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "id": "06c0fabe-2318-47b3-908c-b2b5b457b325",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "710"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "list_video_ids = get_video_ids(youtube,'UUpQ34afVgk8cRQBjSJ1xuJQ')\n",
-    "len(list_video_ids)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "94d4b0f0-8d42-457b-a4ee-bb5af281a2ff",
    "metadata": {},
    "outputs": [],
@@ -321,13 +315,12 @@
     "            all_video_stats.append(video_stats)\n",
     "                             \n",
     "    return pd.DataFrame(all_video_stats)\n",
-    "    \n",
     "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "8e692bcf-9966-4fd0-9e87-0d63d815826a",
    "metadata": {},
    "outputs": [],
@@ -350,7 +343,7 @@
     "                videoId=video_id)\n",
     "            response = request.execute()\n",
     "        \n",
-    "            comments_in_video = [comment['snippet']['topLevelComment']['snippet']['textOriginal'] for comment in response['items'][0:10]]\n",
+    "            comments_in_video = [comment['snippet']['topLevelComment']['snippet']['textOriginal'] for comment in response['items']]\n",
     "            comments_in_video_info = {'video_id': video_id, 'comments': comments_in_video}\n",
     "\n",
     "            all_comments.append(comments_in_video_info)\n",
@@ -360,6 +353,160 @@
     "            print('Could not get comments for video ' + video_id)\n",
     "        \n",
     "    return pd.DataFrame(all_comments)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "121a744c-c03d-46c4-8a1b-06d7fa9632b5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Getting video information from channel: Chloe Ting\n",
+      "Could not get comments for video aI5nDsHew_E\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\saheb\\AppData\\Local\\Temp\\ipykernel_13528\\4210548952.py:17: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
+      "  video_df = video_df.append(video_data, ignore_index=True)\n",
+      "C:\\Users\\saheb\\AppData\\Local\\Temp\\ipykernel_13528\\4210548952.py:18: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
+      "  comments_df = comments_df.append(comments_data, ignore_index=True)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Getting video information from channel: blogilates\n",
+      "Could not get comments for video AiVqvB07GyI\n",
+      "Could not get comments for video nPQHHZ5sjTw\n",
+      "Could not get comments for video X1kMiRQq354\n",
+      "Could not get comments for video k9mZ6zc6wM0\n",
+      "Could not get comments for video o3E9Oak_n7E\n",
+      "Could not get comments for video kCWmpm5nyCo\n",
+      "Could not get comments for video pPHl8qfAo2A\n",
+      "Could not get comments for video Tfei0NvjZrM\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\saheb\\AppData\\Local\\Temp\\ipykernel_13528\\4210548952.py:17: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
+      "  video_df = video_df.append(video_data, ignore_index=True)\n",
+      "C:\\Users\\saheb\\AppData\\Local\\Temp\\ipykernel_13528\\4210548952.py:18: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
+      "  comments_df = comments_df.append(comments_data, ignore_index=True)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Getting video information from channel: Rebecca-Louise\n",
+      "Could not get comments for video SB8zu5kprJY\n",
+      "Could not get comments for video oAax6YZvaN0\n",
+      "Could not get comments for video 6GsbnH-Tw7k\n",
+      "Could not get comments for video 3vJ05j99CT8\n",
+      "Could not get comments for video rbxxmB6cqtE\n",
+      "Could not get comments for video b7PZXm4NKqk\n",
+      "Could not get comments for video BDDZ9X8-rYg\n",
+      "Could not get comments for video wbH0eD3b7D4\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\saheb\\AppData\\Local\\Temp\\ipykernel_13528\\4210548952.py:17: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
+      "  video_df = video_df.append(video_data, ignore_index=True)\n",
+      "C:\\Users\\saheb\\AppData\\Local\\Temp\\ipykernel_13528\\4210548952.py:18: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
+      "  comments_df = comments_df.append(comments_data, ignore_index=True)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Getting video information from channel: emi wong\n",
+      "Could not get comments for video NJZ95sZlXL4\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\saheb\\AppData\\Local\\Temp\\ipykernel_13528\\4210548952.py:17: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
+      "  video_df = video_df.append(video_data, ignore_index=True)\n",
+      "C:\\Users\\saheb\\AppData\\Local\\Temp\\ipykernel_13528\\4210548952.py:18: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
+      "  comments_df = comments_df.append(comments_data, ignore_index=True)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Getting video information from channel: MadFit\n",
+      "Could not get comments for video VJ75BRoB24I\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\saheb\\AppData\\Local\\Temp\\ipykernel_13528\\4210548952.py:17: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
+      "  video_df = video_df.append(video_data, ignore_index=True)\n",
+      "C:\\Users\\saheb\\AppData\\Local\\Temp\\ipykernel_13528\\4210548952.py:18: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
+      "  comments_df = comments_df.append(comments_data, ignore_index=True)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Create a dataframe with video statistics and comments from all channels\n",
+    "\n",
+    "video_df = pd.DataFrame()\n",
+    "comments_df = pd.DataFrame()\n",
+    "\n",
+    "for c in channels_df['ChannelName'].unique():\n",
+    "    print(\"Getting video information from channel: \" + c)\n",
+    "    playlist_id = channels_df.loc[channels_df['ChannelName']== c, 'playlistID'].iloc[0]\n",
+    "    video_ids = get_video_ids(youtube, playlist_id)\n",
+    "    \n",
+    "    # get video data\n",
+    "    video_data = get_video_stats(youtube, video_ids)\n",
+    "    # get comment data\n",
+    "    comments_data = get_video_comments(youtube, video_ids)\n",
+    "\n",
+    "    # append video data together and comment data toghether\n",
+    "    video_df = video_df.append(video_data, ignore_index=True)\n",
+    "    comments_df = comments_df.append(comments_data, ignore_index=True)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f89c0e79-c7e0-434f-8390-3b51236d6e27",
+   "metadata": {},
+   "source": [
+    "#### Save raw data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "504d134d-55ba-42ca-be68-678a03f50a8a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cwd = os.getcwd()\n",
+    "path = cwd + \"/data/raw\"\n",
+    "channels_df.to_csv(path + \"/channels_data.csv\")\n",
+    "video_df.to_csv(path + \"/videos_data.csv\")\n",
+    "comments_df.to_csv(path + \"/comments_data.csv\")"
    ]
   },
   {
