Changed file name of file that contains code for scraping data from youtube channels

--- a/code/01_data_extraction.ipynb
+++ b/code/01_data_extraction.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "a27446ab-e04d-4f4b-b4af-6d2568045efa",
+   "metadata": {},
+   "source": [
+    "## Data Extraction"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 15,
    "id": "6e468b16-ea0e-4f23-8d7c-ec0e1dd9ed85",
@@ -10,18 +18,11 @@
     "\n",
     "import os\n",
     "import pandas as pd\n",
+    "import youtube_scraping_functions as ytfuns  #\n",
     "\n",
     "from googleapiclient.discovery import build  # Google API\n",
     "from IPython.display import JSON             # Disply JSON\n",
     "from functools import partial                # Use with Map to fix an argument\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "a27446ab-e04d-4f4b-b4af-6d2568045efa",
-   "metadata": {},
-   "source": [
-    "## Data Extraction"
    ]
   },
   {
@@ -173,7 +174,7 @@
     }
    ],
    "source": [
-    "channels_df = get_channel_stats(youtube, channel_ids)\n",
+    "channels_df = ytfuns.get_channel_stats(youtube, channel_ids)\n",
     "channels_df"
    ]
   },
