Modified first code file to account for module functions and created new file for data preprocessing

--- a/code/01_data_extraction.ipynb
+++ b/code/01_data_extraction.ipynb
@@ -306,16 +306,16 @@
     "for c in channels_df['ChannelName'].unique():\n",
     "    print(\"Getting video information from channel: \" + c)\n",
     "    playlist_id = channels_df.loc[channels_df['ChannelName']== c, 'playlistID'].iloc[0]\n",
-    "    video_ids = get_video_ids(youtube, playlist_id)\n",
+    "    video_ids = ytfuns.get_video_ids(youtube, playlist_id)\n",
     "    \n",
     "    # get video data\n",
-    "    video_data = get_video_stats(youtube, video_ids)\n",
+    "    video_data = ytfuns.get_video_stats(youtube, video_ids)\n",
     "    # get comment data\n",
-    "    comments_data = get_video_comments(youtube, video_ids)\n",
+    "    comments_data = ytfuns.get_video_comments(youtube, video_ids)\n",
     "\n",
-    "    # append video data together and comment data toghether\n",
-    "    video_df = video_df.append(video_data, ignore_index=True)\n",
-    "    comments_df = comments_df.append(comments_data, ignore_index=True)\n"
+    "    # concat video data together and comment data toghether\n",
+    "    video_df = pd.concat([video_df,video_data], ignore_index=True)\n",
+    "    comments_df = pd.concat([comments_df,comments_data], ignore_index=True)\n"
    ]
   },
   {
