Performed feature engineering to get number of tags from the tags column

--- a/code/02_data_preprocessing.ipynb
+++ b/code/02_data_preprocessing.ipynb
@@ -16,8 +16,10 @@
    "outputs": [],
    "source": [
     "import os\n",
-    "import pandas as pd\n",
+    "import ast\n",
     "import isodate\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
     "\n",
     "from dateutil import parser"
    ]
@@ -902,7 +904,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 15,
    "id": "6fdbbad8-a1d5-474e-b2e9-6ea4ee283120",
    "metadata": {},
    "outputs": [],
@@ -920,7 +922,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 16,
+   "id": "7fb05ca4-520a-4b9a-9bf4-64bb00028cf5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create the number of tags column\n",
+    "videos_df['tags'] = videos_df['tags'].replace(np.nan, None)\n",
+    "videos_df['tags'] = videos_df['tags'].apply(lambda x: x if x is None else ast.literal_eval(x))\n",
+    "videos_df['tagsCount'] = videos_df['tags'].apply(lambda x: 0 if x is None else len(x))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
    "id": "24946c3e-3469-43cb-ae16-64fbec9d6eff",
    "metadata": {},
    "outputs": [
@@ -942,15 +957,16 @@
        "titleLength                            int64\n",
        "durationSecs                         float64\n",
        "publishedDatetime    datetime64[ns, tzutc()]\n",
+       "publishedYear                         object\n",
        "publishedMonth                        object\n",
        "pushblishDayName                      object\n",
-       "publishedYear                         object\n",
        "publishedHour                         object\n",
        "publishedToD                          object\n",
+       "tagsCount                              int64\n",
        "dtype: object"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -961,7 +977,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 18,
    "id": "e9fe8aeb-74bf-47ef-bfce-e3789c614f91",
    "metadata": {},
    "outputs": [
@@ -996,16 +1012,17 @@
        "      <th>likeCount</th>\n",
        "      <th>favouriteCount</th>\n",
        "      <th>commentCount</th>\n",
-       "      <th>duration</th>\n",
+       "      <th>...</th>\n",
        "      <th>definition</th>\n",
        "      <th>titleLength</th>\n",
        "      <th>durationSecs</th>\n",
        "      <th>publishedDatetime</th>\n",
+       "      <th>publishedYear</th>\n",
        "      <th>publishedMonth</th>\n",
        "      <th>pushblishDayName</th>\n",
-       "      <th>publishedYear</th>\n",
        "      <th>publishedHour</th>\n",
        "      <th>publishedToD</th>\n",
+       "      <th>tagsCount</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -1015,22 +1032,23 @@
        "      <td>Chloe Ting</td>\n",
        "      <td>A day in my life living in Korea</td>\n",
        "      <td>Short vlog from a day out and about while in S...</td>\n",
-       "      <td>['dayinmylife', 'korea', 'seoul', 'vlog', 'chl...</td>\n",
+       "      <td>[dayinmylife, korea, seoul, vlog, chloeting, c...</td>\n",
        "      <td>2023-06-05T14:51:22Z</td>\n",
        "      <td>163593</td>\n",
        "      <td>6344.0</td>\n",
        "      <td>NaN</td>\n",
        "      <td>714.0</td>\n",
-       "      <td>PT12M37S</td>\n",
+       "      <td>...</td>\n",
        "      <td>hd</td>\n",
        "      <td>32</td>\n",
        "      <td>757.0</td>\n",
        "      <td>2023-06-05 14:51:22+00:00</td>\n",
+       "      <td>2023</td>\n",
        "      <td>Jun</td>\n",
        "      <td>Mon</td>\n",
-       "      <td>2023</td>\n",
        "      <td>14</td>\n",
        "      <td>PM</td>\n",
+       "      <td>13</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -1038,22 +1056,23 @@
        "      <td>Chloe Ting</td>\n",
        "      <td>GROW YOUR BOOTY with these exercises</td>\n",
        "      <td>See the full video here: https://youtu.be/4zuY...</td>\n",
-       "      <td>['glute workout', 'booty workout', 'gym workou...</td>\n",
+       "      <td>[glute workout, booty workout, gym workout, fi...</td>\n",
        "      <td>2023-05-24T15:32:44Z</td>\n",
        "      <td>119223</td>\n",
        "      <td>4016.0</td>\n",
        "      <td>NaN</td>\n",
        "      <td>58.0</td>\n",
-       "      <td>PT23S</td>\n",
+       "      <td>...</td>\n",
        "      <td>hd</td>\n",
        "      <td>36</td>\n",
        "      <td>23.0</td>\n",
        "      <td>2023-05-24 15:32:44+00:00</td>\n",
+       "      <td>2023</td>\n",
        "      <td>May</td>\n",
        "      <td>Wed</td>\n",
-       "      <td>2023</td>\n",
        "      <td>15</td>\n",
        "      <td>PM</td>\n",
+       "      <td>27</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -1061,22 +1080,23 @@
        "      <td>Chloe Ting</td>\n",
        "      <td>INTENSE Full Body Workout - 30 Min No Equipment</td>\n",
        "      <td>This is a 30 min full body intense workout fro...</td>\n",
-       "      <td>['workout', 'home workout', 'full body workout...</td>\n",
+       "      <td>[workout, home workout, full body workout, ful...</td>\n",
        "      <td>2023-05-17T14:00:27Z</td>\n",
        "      <td>392463</td>\n",
        "      <td>11738.0</td>\n",
        "      <td>NaN</td>\n",
        "      <td>735.0</td>\n",
-       "      <td>PT31M14S</td>\n",
+       "      <td>...</td>\n",
        "      <td>hd</td>\n",
        "      <td>47</td>\n",
        "      <td>1874.0</td>\n",
        "      <td>2023-05-17 14:00:27+00:00</td>\n",
+       "      <td>2023</td>\n",
        "      <td>May</td>\n",
        "      <td>Wed</td>\n",
-       "      <td>2023</td>\n",
        "      <td>14</td>\n",
        "      <td>PM</td>\n",
+       "      <td>27</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -1084,22 +1104,23 @@
        "      <td>Chloe Ting</td>\n",
        "      <td>10 Min Core &amp; Upper Body | No Equip Home Workout!</td>\n",
        "      <td>This is episode 4 of the 2023 Summer Shred Cha...</td>\n",
-       "      <td>['core', 'abs', 'upper body', 'upper body work...</td>\n",
+       "      <td>[core, abs, upper body, upper body workout, co...</td>\n",
        "      <td>2023-05-15T14:00:01Z</td>\n",
        "      <td>244965</td>\n",
        "      <td>8028.0</td>\n",
        "      <td>NaN</td>\n",
        "      <td>282.0</td>\n",
-       "      <td>PT10M52S</td>\n",
+       "      <td>...</td>\n",
        "      <td>hd</td>\n",
        "      <td>49</td>\n",
        "      <td>652.0</td>\n",
        "      <td>2023-05-15 14:00:01+00:00</td>\n",
+       "      <td>2023</td>\n",
        "      <td>May</td>\n",
        "      <td>Mon</td>\n",
-       "      <td>2023</td>\n",
        "      <td>14</td>\n",
        "      <td>PM</td>\n",
+       "      <td>27</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -1107,25 +1128,27 @@
        "      <td>Chloe Ting</td>\n",
        "      <td>Perky Booty &amp; Leg Workout | 20 min Glute Workout</td>\n",
        "      <td>This is episode 3 of the 2023 Summer Shred Cha...</td>\n",
-       "      <td>['tiny waist', 'waist', 'booty', 'booty workou...</td>\n",
+       "      <td>[tiny waist, waist, booty, booty workout, butt...</td>\n",
        "      <td>2023-05-09T14:00:15Z</td>\n",
        "      <td>470075</td>\n",
        "      <td>13519.0</td>\n",
        "      <td>NaN</td>\n",
        "      <td>428.0</td>\n",
-       "      <td>PT20M39S</td>\n",
+       "      <td>...</td>\n",
        "      <td>hd</td>\n",
        "      <td>48</td>\n",
        "      <td>1239.0</td>\n",
        "      <td>2023-05-09 14:00:15+00:00</td>\n",
+       "      <td>2023</td>\n",
        "      <td>May</td>\n",
        "      <td>Tue</td>\n",
-       "      <td>2023</td>\n",
        "      <td>14</td>\n",
        "      <td>PM</td>\n",
+       "      <td>29</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
+       "<p>5 rows × 21 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -1151,35 +1174,37 @@
        "4  This is episode 3 of the 2023 Summer Shred Cha...   \n",
        "\n",
        "                                                tags           publishedAt  \\\n",
-       "0  ['dayinmylife', 'korea', 'seoul', 'vlog', 'chl...  2023-06-05T14:51:22Z   \n",
-       "1  ['glute workout', 'booty workout', 'gym workou...  2023-05-24T15:32:44Z   \n",
-       "2  ['workout', 'home workout', 'full body workout...  2023-05-17T14:00:27Z   \n",
-       "3  ['core', 'abs', 'upper body', 'upper body work...  2023-05-15T14:00:01Z   \n",
-       "4  ['tiny waist', 'waist', 'booty', 'booty workou...  2023-05-09T14:00:15Z   \n",
+       "0  [dayinmylife, korea, seoul, vlog, chloeting, c...  2023-06-05T14:51:22Z   \n",
+       "1  [glute workout, booty workout, gym workout, fi...  2023-05-24T15:32:44Z   \n",
+       "2  [workout, home workout, full body workout, ful...  2023-05-17T14:00:27Z   \n",
+       "3  [core, abs, upper body, upper body workout, co...  2023-05-15T14:00:01Z   \n",
+       "4  [tiny waist, waist, booty, booty workout, butt...  2023-05-09T14:00:15Z   \n",
        "\n",
-       "   viewCount  likeCount  favouriteCount  commentCount  duration definition  \\\n",
-       "0     163593     6344.0             NaN         714.0  PT12M37S         hd   \n",
-       "1     119223     4016.0             NaN          58.0     PT23S         hd   \n",
-       "2     392463    11738.0             NaN         735.0  PT31M14S         hd   \n",
-       "3     244965     8028.0             NaN         282.0  PT10M52S         hd   \n",
-       "4     470075    13519.0             NaN         428.0  PT20M39S         hd   \n",
+       "   viewCount  likeCount  favouriteCount  commentCount  ... definition  \\\n",
+       "0     163593     6344.0             NaN         714.0  ...         hd   \n",
+       "1     119223     4016.0             NaN          58.0  ...         hd   \n",
+       "2     392463    11738.0             NaN         735.0  ...         hd   \n",
+       "3     244965     8028.0             NaN         282.0  ...         hd   \n",
+       "4     470075    13519.0             NaN         428.0  ...         hd   \n",
        "\n",
-       "   titleLength  durationSecs         publishedDatetime publishedMonth  \\\n",
-       "0           32         757.0 2023-06-05 14:51:22+00:00            Jun   \n",
-       "1           36          23.0 2023-05-24 15:32:44+00:00            May   \n",
-       "2           47        1874.0 2023-05-17 14:00:27+00:00            May   \n",
-       "3           49         652.0 2023-05-15 14:00:01+00:00            May   \n",
-       "4           48        1239.0 2023-05-09 14:00:15+00:00            May   \n",
+       "  titleLength  durationSecs         publishedDatetime publishedYear  \\\n",
+       "0          32         757.0 2023-06-05 14:51:22+00:00          2023   \n",
+       "1          36          23.0 2023-05-24 15:32:44+00:00          2023   \n",
+       "2          47        1874.0 2023-05-17 14:00:27+00:00          2023   \n",
+       "3          49         652.0 2023-05-15 14:00:01+00:00          2023   \n",
+       "4          48        1239.0 2023-05-09 14:00:15+00:00          2023   \n",
        "\n",
-       "  pushblishDayName publishedYear publishedHour publishedToD  \n",
-       "0              Mon          2023            14           PM  \n",
-       "1              Wed          2023            15           PM  \n",
-       "2              Wed          2023            14           PM  \n",
-       "3              Mon          2023            14           PM  \n",
-       "4              Tue          2023            14           PM  "
+       "  publishedMonth pushblishDayName publishedHour publishedToD tagsCount  \n",
+       "0            Jun              Mon            14           PM        13  \n",
+       "1            May              Wed            15           PM        27  \n",
+       "2            May              Wed            14           PM        27  \n",
+       "3            May              Mon            14           PM        27  \n",
+       "4            May              Tue            14           PM        29  \n",
+       "\n",
+       "[5 rows x 21 columns]"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1187,6 +1212,14 @@
    "source": [
     "videos_df.head()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a1c474d3-c21c-4b1e-9e81-96a498e01466",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
