Changed file naming convention and altered folder structure for better organization and readability

--- a/code/02-data-preprocessing.ipynb
+++ b/code/02-data-preprocessing.ipynb
@@ -1109,10 +1109,15 @@
     "    {\"label\": \"UPPER_BODY\", \"pattern\": [{\"LOWER\": \"upper\"}, {\"LOWER\": \"body\"}]},\n",
     "    {\"label\": \"LOWER_BODY\", \"pattern\": [{\"LOWER\": \"lower\"}, {\"LOWER\": \"body\"}]},\n",
     "    {\"label\": \"CHEST_BACK\", \"pattern\": [{\"LOWER\": {\"REGEX\": r\"(back|chest)\"}}, {\"ORTH\": {\"REGEX\": r\"(and|&)\"}} ,{\"LOWER\": {\"REGEX\": r\"(back|chest)\"}}]},\n",
-    "    {\"label\": \"ABS\", \"pattern\": [{\"LOWER\": {\"REGEX\": r\"(core|ab|abs)\"}}]},\n",
+    "    {\"label\": \"ABS\", \"pattern\": [{\"LOWER\": {\"REGEX\": r\"(core|ab|abs|plank)\"}}]},\n",
     "    {\"label\": \"ARMS\", \"pattern\": [{\"LOWER\": {\"REGEX\": r\"arms?\"}}]},\n",
     "    {\"label\": \"LEGS\", \"pattern\": [{\"LOWER\": {\"REGEX\": r\"(thigh|thighs|leg|legs)\"}}]},\n",
-    "    {\"label\": \"GLUTES\", \"pattern\": [{\"LOWER\": {\"REGEX\": r\"(booty|glute|glutes|butt)\"}}]}\n",
+    "    {\"label\": \"GLUTES\", \"pattern\": [{\"LOWER\": {\"REGEX\": r\"(booty|glute|glutes|butt)\"}}]},\n",
+    "    {\"label\": \"WORKOUT_TYPE\", \"pattern\": [{\"LOWER\": {\"REGEX\": r\"(hiit|cardio|pilates|yoga|dance|tabata|barre)\"}}]},\n",
+    "    {\"label\": \"STANDING\" , \"pattern\": {\"LOWER\": \"standing\"}},\n",
+    "    {\"label\": \"NO_EQUIPMENT\", \"pattern\": {}},\n",
+    "    {\"label\": \"NO_JUMPING\", \"pattern\": {}},\n",
+    "    {\"label\": \"LOW_IMPACT\", \"pattern\": {}}\n",
     "]"
    ]
   },
@@ -1145,7 +1150,18 @@
     "        if ent.label_ == \"WORKOUT_TIME\":\n",
     "            workout_time = ent.text\n",
     "            break\n",
-    "    return workout_time\n"
+    "    return workout_time\n",
+    "\n",
+    "# Function to extract body part from a title\n",
+    "def extract_body_part(title):\n",
+    "    doc = nlp(title)\n",
+    "    body_part = None\n",
+    "    body_parts = [\"FULL_BODY\",\"UPPER_BODY\",\"LOWER_BODY\",\"CHEST_BACK\",\"ARMS\",\"ABS\",\"LEGS\",\"GLUTES\"]\n",
+    "    for ent in doc.ents:\n",
+    "        if ent.label_ in body_parts:\n",
+    "            body_part = (ent.text, ent.label_)\n",
+    "            break\n",
+    "    return body_part\n"
    ]
   },
   {
@@ -1159,27 +1175,6 @@
    "source": [
     "# Apply the function to create a workout time column\n",
     "workout_videos_df['workoutTime'] = workout_videos_df['title'].apply(extract_workout_time)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 40,
-   "id": "6341d470-767a-4b14-98e5-a3a2b1fe8b5f",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "# Function to extract body part from a title\n",
-    "def extract_body_part(title):\n",
-    "    doc = nlp(title)\n",
-    "    body_part = None\n",
-    "    body_parts = [\"FULL_BODY\",\"UPPER_BODY\",\"LOWER_BODY\",\"CHEST_BACK\",\"ARMS\",\"ABS\",\"LEGS\",\"GLUTES\"]\n",
-    "    for ent in doc.ents:\n",
-    "        if ent.label_ in body_parts:\n",
-    "            body_part = (ent.text, ent.label_)\n",
-    "            break\n",
-    "    return body_part\n"
    ]
   },
   {
