--- a/code/02-data-preprocessing.ipynb
+++ b/code/02-data-preprocessing.ipynb
@@ -9,6 +9,12 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "075e8e58-7afa-4d66-be51-6bf2c1a4d6f6",
+   "metadata": {},
+   "source": []
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "d2197680-4917-4213-8e56-60439f0875e9",
@@ -426,38 +432,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "298e6969-0945-4d8f-8673-940756876e44",
-   "metadata": {},
-   "source": [
-    "Getting video information from channel: blogilates\n",
-    "Could not get comments for video AiVqvB07GyI\n",
-    "Could not get comments for video nPQHHZ5sjTw\n",
-    "Could not get comments for video X1kMiRQq354\n",
-    "Could not get comments for video k9mZ6zc6wM0\n",
-    "Could not get comments for video o3E9Oak_n7E\n",
-    "Could not get comments for video kCWmpm5nyCo\n",
-    "Could not get comments for video pPHl8qfAo2A\n",
-    "Could not get comments for video Tfei0NvjZrM\n",
-    "\n",
-    "Getting video information from channel: Rebecca-Louise\n",
-    "Could not get comments for video SB8zu5kprJY\n",
-    "Could not get comments for video oAax6YZvaN0\n",
-    "Could not get comments for video 6GsbnH-Tw7k\n",
-    "Could not get comments for video 3vJ05j99CT8\n",
-    "Could not get comments for video rbxxmB6cqtE\n",
-    "Could not get comments for video b7PZXm4NKqk\n",
-    "Could not get comments for video BDDZ9X8-rYg\n",
-    "Could not get comments for video wbH0eD3b7D4\n",
-    "\n",
-    "Getting video information from channel: emi wong\n",
-    "Could not get comments for video NJZ95sZlXL4\n",
-    "\n",
-    "Getting video information from channel: MadFit\n",
-    "Could not get comments for video VJ75BRoB24I"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 8,
    "id": "fd67da71-e057-4a53-a1ac-cba14a5a0e40",
@@ -755,281 +729,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 22,
-   "id": "24946c3e-3469-43cb-ae16-64fbec9d6eff",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "video_id                              object\n",
-       "channelTitle                          object\n",
-       "title                                 object\n",
-       "description                           object\n",
-       "tags                                  object\n",
-       "publishedAt                           object\n",
-       "viewCount                              int64\n",
-       "likeCount                            float64\n",
-       "commentCount                         float64\n",
-       "duration                              object\n",
-       "titleLength                            int64\n",
-       "durationSecs                         float64\n",
-       "publishedDatetime    datetime64[ns, tzutc()]\n",
-       "publishedYear                         object\n",
-       "publishedMonth                        object\n",
-       "pushblishDayName                      object\n",
-       "publishedHour                         object\n",
-       "publishedToD                          object\n",
-       "tagsCount                              int64\n",
-       "youtubeShorts                           bool\n",
-       "dtype: object"
-      ]
-     },
-     "execution_count": 22,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "videos_df.dtypes"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
-   "id": "e9fe8aeb-74bf-47ef-bfce-e3789c614f91",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>video_id</th>\n",
-       "      <th>channelTitle</th>\n",
-       "      <th>title</th>\n",
-       "      <th>description</th>\n",
-       "      <th>tags</th>\n",
-       "      <th>publishedAt</th>\n",
-       "      <th>viewCount</th>\n",
-       "      <th>likeCount</th>\n",
-       "      <th>commentCount</th>\n",
-       "      <th>duration</th>\n",
-       "      <th>titleLength</th>\n",
-       "      <th>durationSecs</th>\n",
-       "      <th>publishedDatetime</th>\n",
-       "      <th>publishedYear</th>\n",
-       "      <th>publishedMonth</th>\n",
-       "      <th>pushblishDayName</th>\n",
-       "      <th>publishedHour</th>\n",
-       "      <th>publishedToD</th>\n",
-       "      <th>tagsCount</th>\n",
-       "      <th>youtubeShorts</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>5GLA8MrlDnM</td>\n",
-       "      <td>Chloe Ting</td>\n",
-       "      <td>A day in my life living in Korea</td>\n",
-       "      <td>Short vlog from a day out and about while in S...</td>\n",
-       "      <td>[dayinmylife, korea, seoul, vlog, chloeting, c...</td>\n",
-       "      <td>2023-06-05T14:51:22Z</td>\n",
-       "      <td>163593</td>\n",
-       "      <td>6344.0</td>\n",
-       "      <td>714.0</td>\n",
-       "      <td>PT12M37S</td>\n",
-       "      <td>32</td>\n",
-       "      <td>757.0</td>\n",
-       "      <td>2023-06-05 14:51:22+00:00</td>\n",
-       "      <td>2023</td>\n",
-       "      <td>Jun</td>\n",
-       "      <td>Mon</td>\n",
-       "      <td>14</td>\n",
-       "      <td>PM</td>\n",
-       "      <td>13</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>IOJ7Fxa8e2Y</td>\n",
-       "      <td>Chloe Ting</td>\n",
-       "      <td>GROW YOUR BOOTY with these exercises</td>\n",
-       "      <td>See the full video here: https://youtu.be/4zuY...</td>\n",
-       "      <td>[glute workout, booty workout, gym workout, fi...</td>\n",
-       "      <td>2023-05-24T15:32:44Z</td>\n",
-       "      <td>119223</td>\n",
-       "      <td>4016.0</td>\n",
-       "      <td>58.0</td>\n",
-       "      <td>PT23S</td>\n",
-       "      <td>36</td>\n",
-       "      <td>23.0</td>\n",
-       "      <td>2023-05-24 15:32:44+00:00</td>\n",
-       "      <td>2023</td>\n",
-       "      <td>May</td>\n",
-       "      <td>Wed</td>\n",
-       "      <td>15</td>\n",
-       "      <td>PM</td>\n",
-       "      <td>27</td>\n",
-       "      <td>True</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>ljNgkSctkXg</td>\n",
-       "      <td>Chloe Ting</td>\n",
-       "      <td>INTENSE Full Body Workout - 30 Min No Equipment</td>\n",
-       "      <td>This is a 30 min full body intense workout fro...</td>\n",
-       "      <td>[workout, home workout, full body workout, ful...</td>\n",
-       "      <td>2023-05-17T14:00:27Z</td>\n",
-       "      <td>392463</td>\n",
-       "      <td>11738.0</td>\n",
-       "      <td>735.0</td>\n",
-       "      <td>PT31M14S</td>\n",
-       "      <td>47</td>\n",
-       "      <td>1874.0</td>\n",
-       "      <td>2023-05-17 14:00:27+00:00</td>\n",
-       "      <td>2023</td>\n",
-       "      <td>May</td>\n",
-       "      <td>Wed</td>\n",
-       "      <td>14</td>\n",
-       "      <td>PM</td>\n",
-       "      <td>27</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>0rL2496zybs</td>\n",
-       "      <td>Chloe Ting</td>\n",
-       "      <td>10 Min Core &amp; Upper Body | No Equip Home Workout!</td>\n",
-       "      <td>This is episode 4 of the 2023 Summer Shred Cha...</td>\n",
-       "      <td>[core, abs, upper body, upper body workout, co...</td>\n",
-       "      <td>2023-05-15T14:00:01Z</td>\n",
-       "      <td>244965</td>\n",
-       "      <td>8028.0</td>\n",
-       "      <td>282.0</td>\n",
-       "      <td>PT10M52S</td>\n",
-       "      <td>49</td>\n",
-       "      <td>652.0</td>\n",
-       "      <td>2023-05-15 14:00:01+00:00</td>\n",
-       "      <td>2023</td>\n",
-       "      <td>May</td>\n",
-       "      <td>Mon</td>\n",
-       "      <td>14</td>\n",
-       "      <td>PM</td>\n",
-       "      <td>27</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>PEX2uefaUAY</td>\n",
-       "      <td>Chloe Ting</td>\n",
-       "      <td>Perky Booty &amp; Leg Workout | 20 min Glute Workout</td>\n",
-       "      <td>This is episode 3 of the 2023 Summer Shred Cha...</td>\n",
-       "      <td>[tiny waist, waist, booty, booty workout, butt...</td>\n",
-       "      <td>2023-05-09T14:00:15Z</td>\n",
-       "      <td>470075</td>\n",
-       "      <td>13519.0</td>\n",
-       "      <td>428.0</td>\n",
-       "      <td>PT20M39S</td>\n",
-       "      <td>48</td>\n",
-       "      <td>1239.0</td>\n",
-       "      <td>2023-05-09 14:00:15+00:00</td>\n",
-       "      <td>2023</td>\n",
-       "      <td>May</td>\n",
-       "      <td>Tue</td>\n",
-       "      <td>14</td>\n",
-       "      <td>PM</td>\n",
-       "      <td>29</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "      video_id channelTitle  \\\n",
-       "0  5GLA8MrlDnM   Chloe Ting   \n",
-       "1  IOJ7Fxa8e2Y   Chloe Ting   \n",
-       "2  ljNgkSctkXg   Chloe Ting   \n",
-       "3  0rL2496zybs   Chloe Ting   \n",
-       "4  PEX2uefaUAY   Chloe Ting   \n",
-       "\n",
-       "                                               title  \\\n",
-       "0                   A day in my life living in Korea   \n",
-       "1               GROW YOUR BOOTY with these exercises   \n",
-       "2    INTENSE Full Body Workout - 30 Min No Equipment   \n",
-       "3  10 Min Core & Upper Body | No Equip Home Workout!   \n",
-       "4   Perky Booty & Leg Workout | 20 min Glute Workout   \n",
-       "\n",
-       "                                         description  \\\n",
-       "0  Short vlog from a day out and about while in S...   \n",
-       "1  See the full video here: https://youtu.be/4zuY...   \n",
-       "2  This is a 30 min full body intense workout fro...   \n",
-       "3  This is episode 4 of the 2023 Summer Shred Cha...   \n",
-       "4  This is episode 3 of the 2023 Summer Shred Cha...   \n",
-       "\n",
-       "                                                tags           publishedAt  \\\n",
-       "0  [dayinmylife, korea, seoul, vlog, chloeting, c...  2023-06-05T14:51:22Z   \n",
-       "1  [glute workout, booty workout, gym workout, fi...  2023-05-24T15:32:44Z   \n",
-       "2  [workout, home workout, full body workout, ful...  2023-05-17T14:00:27Z   \n",
-       "3  [core, abs, upper body, upper body workout, co...  2023-05-15T14:00:01Z   \n",
-       "4  [tiny waist, waist, booty, booty workout, butt...  2023-05-09T14:00:15Z   \n",
-       "\n",
-       "   viewCount  likeCount  commentCount  duration  titleLength  durationSecs  \\\n",
-       "0     163593     6344.0         714.0  PT12M37S           32         757.0   \n",
-       "1     119223     4016.0          58.0     PT23S           36          23.0   \n",
-       "2     392463    11738.0         735.0  PT31M14S           47        1874.0   \n",
-       "3     244965     8028.0         282.0  PT10M52S           49         652.0   \n",
-       "4     470075    13519.0         428.0  PT20M39S           48        1239.0   \n",
-       "\n",
-       "          publishedDatetime publishedYear publishedMonth pushblishDayName  \\\n",
-       "0 2023-06-05 14:51:22+00:00          2023            Jun              Mon   \n",
-       "1 2023-05-24 15:32:44+00:00          2023            May              Wed   \n",
-       "2 2023-05-17 14:00:27+00:00          2023            May              Wed   \n",
-       "3 2023-05-15 14:00:01+00:00          2023            May              Mon   \n",
-       "4 2023-05-09 14:00:15+00:00          2023            May              Tue   \n",
-       "\n",
-       "  publishedHour publishedToD  tagsCount  youtubeShorts  \n",
-       "0            14           PM         13          False  \n",
-       "1            15           PM         27           True  \n",
-       "2            14           PM         27          False  \n",
-       "3            14           PM         27          False  \n",
-       "4            14           PM         29          False  "
-      ]
-     },
-     "execution_count": 23,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "videos_df.head()"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "94b30c16-0c2f-4d63-a564-5f246498a5ad",
    "metadata": {},
    "source": [
-    "Natural Language Processing of text (title column) to enrich the data"
+    "#### Natural Language Processing of text (title column) to enrich the data"
    ]
   },
   {
@@ -1042,29 +746,6 @@
    "outputs": [],
    "source": [
     "workout_videos_df = videos_df[videos_df['youtubeShorts'] == False].copy()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 35,
-   "id": "4042766f-3f9c-47d2-9039-d2a20437fa4e",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(3275, 20)"
-      ]
-     },
-     "execution_count": 35,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "workout_videos_df.shape"
    ]
   },
   {
@@ -1113,11 +794,12 @@
     "    {\"label\": \"ARMS\", \"pattern\": [{\"LOWER\": {\"REGEX\": r\"arms?\"}}]},\n",
     "    {\"label\": \"LEGS\", \"pattern\": [{\"LOWER\": {\"REGEX\": r\"(thigh|thighs|leg|legs)\"}}]},\n",
     "    {\"label\": \"GLUTES\", \"pattern\": [{\"LOWER\": {\"REGEX\": r\"(booty|glute|glutes|butt)\"}}]},\n",
-    "    {\"label\": \"WORKOUT_TYPE\", \"pattern\": [{\"LOWER\": {\"REGEX\": r\"(hiit|cardio|pilates|yoga|dance|tabata|barre)\"}}]},\n",
+    "    {\"label\": \"WORKOUT_TYPE\", \"pattern\": [{\"LOWER\": {\"REGEX\": r\"(hiit|cardio|pilates|yoga|dance|tabata|barre|stretch)\"}}]},\n",
     "    {\"label\": \"STANDING\" , \"pattern\": {\"LOWER\": \"standing\"}},\n",
-    "    {\"label\": \"NO_EQUIPMENT\", \"pattern\": {}},\n",
-    "    {\"label\": \"NO_JUMPING\", \"pattern\": {}},\n",
-    "    {\"label\": \"LOW_IMPACT\", \"pattern\": {}}\n",
+    "    {\"label\": \"NO_EQUIPMENT\", \"pattern\": {\"LOWER\": \"no\", \"LOWER\": {\"REGEX\": r\"(equipment|weight|weights)\"}}},\n",
+    "    {\"label\": \"NO_JUMPING\", \"pattern\": {\"LOWER\": \"no\", \"LOWER\": \"jumping\"}},\n",
+    "    {\"label\": \"LOW_IMPACT\", \"pattern\": {\"LOWER\": \"low\", \"LOWER\": \"impact\"}},\n",
+    "    {\"label\": \"STRENGTH_TRAINING\", \"pattern\": {\"LOWER\": {\"REGEX\": r\"(strength|sculpt|sculpting|tone|toning|toned)\"}}\n",
     "]"
    ]
   },
@@ -1159,9 +841,69 @@
     "    body_parts = [\"FULL_BODY\",\"UPPER_BODY\",\"LOWER_BODY\",\"CHEST_BACK\",\"ARMS\",\"ABS\",\"LEGS\",\"GLUTES\"]\n",
     "    for ent in doc.ents:\n",
     "        if ent.label_ in body_parts:\n",
-    "            body_part = (ent.text, ent.label_)\n",
+    "            body_part = ent.label_\n",
     "            break\n",
-    "    return body_part\n"
+    "    return body_part\n",
+    "\n",
+    "# Extract workout type using regular expressions\n",
+    "def extract_workout_type(title):\n",
+    "    doc = nlp(title)\n",
+    "    workout_type = None\n",
+    "    for ent in doc.ents:\n",
+    "        if ent.label_ == \"WORKOUT_TYPE\":\n",
+    "            workout_type = ent.text\n",
+    "            break\n",
+    "    return workout_type\n",
+    "\n",
+    "# Extract standing workout using regular expressions\n",
+    "def extract_standing_workout(title):\n",
+    "    doc = nlp(title)\n",
+    "    standing = None\n",
+    "    for ent in doc.ents:\n",
+    "        if ent.label_ == \"STANDING\":\n",
+    "            standing = ent.label_\n",
+    "            break\n",
+    "    return standing\n",
+    "\n",
+    "# Extract no jumping workout using regular expressions\n",
+    "def extract_no_jumping_workout(title):\n",
+    "    doc = nlp(title)\n",
+    "    no_jumping = None\n",
+    "    for ent in doc.ents:\n",
+    "        if ent.label_ == \"NO_JUMPING\":\n",
+    "            no_jumping = ent.label_\n",
+    "            break\n",
+    "    return no_jumping\n",
+    "\n",
+    "# Extract no equipment workout using regular expressions\n",
+    "def extract_no_equipment_workout(title):\n",
+    "    doc = nlp(title)\n",
+    "    no_equipment = None\n",
+    "    for ent in doc.ents:\n",
+    "        if ent.label_ == \"NO_EQUIPMENT\":\n",
+    "            no_equipment = ent.label_\n",
+    "            break\n",
+    "    return no_equipment\n",
+    "\n",
+    "# Extract low impact workout using regular expressions\n",
+    "def extract_low_impact_workout(title):\n",
+    "    doc = nlp(title)\n",
+    "    low_impact = None\n",
+    "    for ent in doc.ents:\n",
+    "        if ent.label_ == \"LOW_IMPACT\":\n",
+    "            low_impact = ent.label_\n",
+    "            break\n",
+    "    return low_impact\n",
+    "\n",
+    "# Extract strength training workout using regular expressions\n",
+    "def extract_strength_training_workout(title):\n",
+    "    doc = nlp(title)\n",
+    "    strength_training = None\n",
+    "    for ent in doc.ents:\n",
+    "        if ent.label_ == \"STRENGTH_TRAINING\":\n",
+    "            strength_training = ent.label_\n",
+    "            break\n",
+    "    return strength_training\n"
    ]
   },
   {
@@ -1174,20 +916,28 @@
    "outputs": [],
    "source": [
     "# Apply the function to create a workout time column\n",
-    "workout_videos_df['workoutTime'] = workout_videos_df['title'].apply(extract_workout_time)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 41,
-   "id": "1b55e09e-e275-4e00-b12f-88996299abff",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
+    "workout_videos_df['workoutTime'] = workout_videos_df['title'].apply(extract_workout_time)\n",
+    "\n",
     "# Apply the function to create a body part column\n",
-    "workout_videos_df['bodyPart'] = workout_videos_df['title'].apply(extract_body_part)"
+    "workout_videos_df['bodyPart'] = workout_videos_df['title'].apply(extract_body_part)\n",
+    "\n",
+    "# Apply the function to create a workout type column\n",
+    "workout_videos_df['workoutType'] = workout_videos_df['title'].apply(extract_workout_type)\n",
+    "\n",
+    "# Apply the function to create a standing workout column\n",
+    "workout_videos_df['standing'] = workout_videos_df['title'].apply(extract_standing_workout)\n",
+    "\n",
+    "# Apply the function to create a no equipment column\n",
+    "workout_videos_df['noEquipment'] = workout_videos_df['title'].apply(extract_no_equipment_workout)\n",
+    "\n",
+    "# Apply the function to create a no jumping workout column\n",
+    "workout_videos_df['noJumping'] = workout_videos_df['title'].apply(extract_no_jumping_workout)\n",
+    "\n",
+    "# Apply the function to create a low impact column\n",
+    "workout_videos_df['lowImpact'] = workout_videos_df['title'].apply(extract_low_impact_workout)\n",
+    "\n",
+    "# Apply the function to create a strength training column\n",
+    "workout_videos_df['strengthTraining'] = workout_videos_df['title'].apply(extract_strength_training_workout)\n"
    ]
   },
   {
