Made changes to the feature engineering process to make the data more intuitive and improve efficiency

--- a/output/data-analysis-report.ipynb
+++ b/output/data-analysis-report.ipynb
@@ -2,6 +2,22 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "ab0189ff",
+   "metadata": {},
+   "source": [
+    "There are 5 youtube fitness channels I am interested in. The channel names are MadFit, blogilates, emi wong, Rebecca-Louise and Chloe Ting.\n",
+    "\n",
+    "I used the YouTube Data API v3 to scrape the channel and video information. \n",
+    "To do so, the following steps were carried out in order:\n",
+    "- created a project on Google Developers Console\n",
+    "- requested an authorization credential (API key). \n",
+    "- enabled Youtube API for my project \n",
+    "\n",
+    "As for the functions that I have used to scrape the youtube data, I give credit to thu-vu92 for using the code provided her GitHub project 'youtube-api-analysis'. This project was inspired by the YouTube API tutorial video created by Thu Vu data analytics, titled 'Youtube API for Python: How to Create a Unique Data Portfolio Project'."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "e3c412e7-4391-4318-93dc-10c1c336f131",
    "metadata": {},
    "source": [
